# classiq-library

./: .gitignore  .pre-commit-config.yaml  <Marzieh>_<Bathaee>_hw4.ipynb  Aadhithya_Sankaranarayanan_hw4.ipynb  Abdullah_Kazi_hw4.ipynb  Aditi_Lal_hw4.ipynb  Ahmet_Alperen_Tekin_hw4.ipynb  Albert_Cañellas_hw4.ipynb  Asma___TaharTaiba__hw4_(4).ipynb  Attiye_moradi_hw4.ipynb  Ayush_Dutta_hw4.ipynb  BE_Sparse_Classiq.ipynb  CITATION.bib  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Classiq.ipynb  Decomposing_Finite_Abelian_Groups_using_Classiq's_sdk.ipynb  Didier_Kenigoule_hw4.ipynb  EtanAbbas_Ehsanfar_hw4.ipynb  Fataneh_Bakherad_hw4.ipynb  Gilberto_Juarez_hw4.ipynb  Helarie_Fah_hw4.ipynb  Ibrahim_Patel_hw4.ipynb  Jyotiprakash_Parhi_hw4.ipynb  LICENSE  Manimugdha_Saikia_hw4.ipynb  Marzieh_Bathaee_hw4.ipynb  Omar_AlsaidSulaiman_hw4.ipynb  OptionPricing.ipynb  Pacome_Nguimeya_hw4.ipynb  Persik.synthesis_options.json  Priya_Bucha Jain_hw4.ipynb  README.md  Sayantan_RoyChowdhury_hw4.ipynb  Shivansh_Malviya_hw4_extra.ipynb  Test_Adam_Nadav.ipynb  Yasir_Mansour_HW2_QClass2024.ipynb  classiqVQE (1).ipynb  energy_gradient.ipynb  galanebasha_namomsa_hw4.ipynb  (+12 more)
.internal/app-store/: .gitignore  clear_build.sh  mkdocs.yml  pyproject.toml
.internal/app-store/docs/: index.md  pages.yml
.internal/app-store/docs/algorithms/: index.md
.internal/app-store/docs/community/: index.md
.internal/app-store/docs/css/: page_format.css
.internal/app-store/mkdocs-plugins/: pyproject.toml
.internal/app-store/mkdocs-plugins/app_store_plugins/: conversion_fixes.py  external_links.py  (+1 more)
(+3681 files in other folders)
